# libupnp

./: CMakeLists.txt  Makefile.in  aclocal.m4  autoconfig.h  autoconfig.h.in  configure
ixml/: Makefile.in
ixml/doc/: Makefile.in
upnp/: Makefile.in
upnp/doc/: Makefile.in
upnp/inc/: upnpconfig.h
upnp/sample/: Makefile.in
upnp/unittest/: Makefile.in
